<resources>
    <string name="app_name">Battleship</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_aut">activity_aut</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="upload_image">Upload Image</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="username">Username:</string>
    <string name="profile_image">Profile image</string>
    <string name="use_gravatar">Use Gravatar</string>
    <string name="random">Random</string>
    <string name="ready">Ready</string>
    <string name="guest">Guest:</string>
    <string name="host">Host:</string>
    <string name="connect">Connect</string>
    <string name="game_ready">Use this ID to connect</string>
    <string name="connect_id">Connect to the game with ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>